fix:spacing on margins

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -100,21 +100,16 @@
 }
 
 .aboutContainer{
-  width: 90%;
-  border: 1px solid red;
-}
-
-.innerAboutContainer {
+  width: 80%;
+  padding: 0px 50px 0px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .textContainer {
-  flex: 1;
   border-radius: 15px;
   margin: 0px 100px;
   font-size: 1.2rem;
-  border: 1px solid red;
 }
 
 .textContainer h2 {
@@ -130,7 +125,8 @@
 }
 
 .buttonContainer {
-  padding-top: 30px;
+  margin-top: 30px;
+  text-align: center;
 }
 
 .name {
@@ -149,14 +145,9 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .innerAboutContainer {
+  .aboutContainer {
     flex-direction: column;
     align-items: center;
-  }
-
-  .textContainer {
-    width: 80%;
-    margin: 0;
   }
 
   .textContainer p {
@@ -169,7 +160,6 @@
   }
 
   .buttonContainer{
-    margin-left: 0px;
     scale: 0.8;
   }
 }
@@ -179,10 +169,5 @@
   text-align: center;
   align-items: center;
   font-size: 1.2rem;
-  border: 1px solid red;
-}
-
-.buttonContainer {
-  text-align: center;
 }
 
